# fishsticks

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  ffs  migrate.rs  take.json
libs/sharebill/: Cargo.toml
libs/sharebill/src/: lib.rs  models.rs  rational.rs
migrations/20161118110913_create_menu/: down.sql  up.sql
migrations/20161123094749_create_orders/: down.sql  up.sql
migrations/20161125073155_fix_menu_items_primary_key/: down.sql  up.sql
migrations/20161125081650_change_columns_to_collate_nocase/: down.sql  up.sql
migrations/20161125142450_create_sharebill_associations/: down.sql  up.sql
migrations/20161201080051_create_menus/: down.sql  up.sql
src/: cmd.rs  config.rs  db.rs  ingest.rs  main.rs  matrix.rs  models.rs  schema.rs  sharebill.rs  slack.rs  state.rs  takedown.rs  web.rs  words.rs
src/cmd/: command_context.rs  commands.rs  error.rs  mod.rs  response.rs
templates/: footer.html  header.hbs  index.hbs  index.html  layout.html  menu.hbs  menu.html  restaurant.hbs  restaurant.html
