[package]
authors = ["Magnus Hoff <maghoff@gmail.com>"]
build = "migrate.rs"
name = "fishsticks"
version = "0.1.0"

[build-dependencies]

[build-dependencies.diesel]
default-features = false
features = ["sqlite"]
version = "^0.9.0"

[dependencies]
bart = "0.0.1"
bart_derive = "0.0.1"
bodyparser = "0.5"
getopts = "^0.2.14"
iron = "^0.5.1"
itertools = "0.5.6"
num = "0.1.36"
quick-error = "^1.1.0"
rand = "0.3.14"
reqwest = "0.4.0"
router = "^0.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
time = "0.1.35"
urlencoded = "0.5"

[dependencies.diesel]
default-features = false
features = ["sqlite"]
version = "0.10.0"

[dependencies.diesel_codegen]
default-features = false
features = ["sqlite"]
version = "0.10.0"

[dependencies.sharebill]
path = "libs/sharebill"

[dependencies.uuid]
features = ["use_std", "v4"]
version = "^0.2"
